# skeuit

./: .gitignore  Cargo.toml  README.md
migrations/2022-03-19-060424_main/: up.sql
migrations/2022-03-20-202322_main/: up.sql
src/: bot.rs  lib.rs  models.rs  packet.rs  schema.rs
