[package]
name = "skeuit"
version = "0.1.0"
authors = ["Robin Markowitz <robin.mwitz@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
