[package]
name = "skeuit"
version = "0.1.0"
authors = ["Robin Markowitz <robin.mwitz@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
tungstenite = "0.16.0"
url = "2.2.2"
futures-channel = "0.3"
futures-util = "0.3.21"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.79"
